ECM-Team highlighted in MRL news for radiation detection with ceramics
April 1, 2024
Prof. Rupp and team have been featured in <a href="https://mrl.mit.edu/node/254" target="_blank">MRL News</a> for discovering a fundamentally new way to detect radiation with ceramics (<a href="https://onlinelibrary.wiley.com/doi/10.1002/adma.202309253?af=R" target="_blank">article here</a>).

Prof. Rupp's announced as Member of the National Academy of Science Leopoldina
February 25, 2024
We are honored to announce Prof. Rupp's recent induction into the Leopoldina, the National Academy of Sciences in Germany. This prestigious recognition is a testament to Prof. Rupp's pioneering contributions to the scientific community and her relentless pursuit of knowledge. The Leopoldina is renowned for its role in promoting science for the benefit of society, and Prof. Rupp's inclusion highlights her significant impact in her field. Join us in celebrating this remarkable achievement!

Prof. Rupp highlighted in Nature for tech trends insights
February 10, 2024
Prof. Rupp's insights on the future of energy storage have been featured in <a href = "https://www.nature.com/articles/d41586-024-00325-z" target = "_blank">Nature</a>. Jennifer's contribution is a testament to the impactful research conducted by our team and her recently founded battery company Qkera. We are proud to share this achievement with the scientific community and our partners.

QKera: A Leap forward in Battery Technology
November, 2024
In November, we celebrated the founding of QKera by CEO Lisa Liu, CTO Andi Weis, and CSO Prof. Rupp. This venture promises to bring innovative solutions to the forefront of battery technology, stemming directly from our research. Keep an eye on <a href = "https://qkera.com/" target = "_blank">this space</a> for more updates!

Jennifer participates in panel at BMW Technology Days
October 20, 2023