@@ -1,6 +1,10 @@
-ECM-Team highlighted in MRL news for radiation detection with ceramics
+Report in Wirtschaftswoche
+April 16, 2024
+Prof. Rupp and Prof. Janek were featured in a report of Wirtschaftswoche on solid-state batteries. <a href="https://www.wiwo.de/" target="_blank">Wirtschaftswoche</a> is one of the most relevant economic newsletters in germany.
+
+ECM-Team highlighted in MIT News for radiation detection with ceramics
 April 1, 2024
-Prof. Rupp and team have been featured in <a href="https://mrl.mit.edu/node/254" target="_blank">MRL News</a> for discovering a fundamentally new way to detect radiation with ceramics (<a href="https://onlinelibrary.wiley.com/doi/10.1002/adma.202309253?af=R" target="_blank">article here</a>).
+Prof. Rupp and team have been featured in <a href="https://news.mit.edu/2024/new-way-detect-radiation-involving-cheap-ceramics-0411" target="_blank">MIT News</a> for discovering a fundamentally new way to detect radiation with ceramics (<a href="https://onlinelibrary.wiley.com/doi/10.1002/adma.202309253?af=R" target="_blank">article here</a>). Previously the team had been featured in <a href="https://mrl.mit.edu/node/254" target="_blank">MRL News</a>.
 
 Prof. Rupp's announced as Member of the National Academy of Science Leopoldina
 February 25, 2024
